--- a/autocomplete-non-react/src/index.html
+++ b/autocomplete-non-react/src/index.html
@@ -10,10 +10,11 @@
   <title>Non-react Autocomplete</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.js"></script>>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.js"></script>
-  <script src="search.js" type="text/javascript"></script>
+  <script src="../lib/search.js" type="text/javascript"></script>
 
   <style type="text/css">
     body {
